--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=TimeTable
+spring.application.name=ESDTask
+server.port = 8082
+
+spring.security.user.name=user
+spring.security.user.password=password
+
+
+# Spring data Config
+spring.datasource.url=jdbc:mysql://localhost:3306/TimeTable?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Stormbreaker1#
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
